avoid overflow on long tags

--- a/src/app/components/articleCard/articleCard.scss
+++ b/src/app/components/articleCard/articleCard.scss
@@ -42,6 +42,7 @@ h5, h6 {
     margin-bottom: 0em;
     margin-left: 0px;
     float: left;
+    list-style-position: inside;
     .tag {
       background: #eeeeee;
       margin-left: 10px;
